2004-12-09  Matt Austern  <austern@apple.com>

	PR c++/18514
	* g++.dg/ext/builtin1.C: New
	* g++.dg/ext/builtin2.C: New
	* g++.dg/ext/builtin3.C: New
	* g++.dg/ext/builtin4.C: New
	* g++.dg/ext/builtin5.C: New
	
2004-10-27  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/weak/typeof-2.c: Needs aliases as well as weak.
	* gcc.dg/weak/weak-3.c: Likewise.
	* gcc.dg/weak/weak-5.c: Likewise.
	* gcc.dg/weak/weak-9.c: Likewise.
	* lib/file-format.exp (gcc_target_object_format): Darwin has Mach-O.
	* lib/target-supports.exp (check_weak_available): Mach-O does weak.

2004-10-27  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/darwin-weakimport-1.c: New.

2004-10-25  Geoffrey Keating  <geoffk@apple.com>

	* objc.dg/image-info.m: Update for changes to section selection.

2004-10-26  Geoffrey Keating  <geoffk@apple.com>

	* gcc.c-torture/compile/20041026-1.c: New.

2004-10-25  David Ayers  <d.ayers@inode.at>
	    Ziemowit Laski  <zlaski@apple.com>

	* objc.dg/call-super-2.m: Add messages to 'Class <Proto>'; update
	diagnostics when messaging 'id <Proto>'.
	* objc.dg/class-protocol-1.m: New test.
	* objc.dg/desig-init-1.m: Add message to an invalid receiver using
	a non-existent method signature.
	* objc.dg/method-5.m, objc.dg/method-6.m, objc.dg/proto-hier-1.m:
	Update diagnostics when messaging with non-existent method signature.
	* objc.dg/proto-hier-2.m: Adjust wording of diagnostic.
	* objc.dg/proto-lossage-1.m, objc.dg/proto-lossage-4.m: Messages to
	invalid receivers are now resolved as if messaging 'id'; remove
	extraneous diagnostics.

2004-10-25  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/16667
	* gcc.dg/init-desig-obs-1.c, gcc.dg/init-desig-obs-2.c,
	gcc.dg/init-desig-obs-3.c: New tests.

2004-10-25  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/debug/20041023-1.c: New test.

2004-10-25  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/17407
	* gcc.c-torture/compile/pr17407.c: New test.

	PR c++/18121
	* g++.dg/template/array8.C: New test.
