@@ -1,0 +1,5 @@
+/* APPLE LOCAL file put in 4.1 */
+#ifdef ONESUB_C_INCLUDED
+#error should only be imported once
+#endif
+#define ONESUB_C_INCLUDED 1
