@@ -1,3 +1,8 @@
+2004-12-15  Geoffrey Keating  <geoffk@apple.com>
+
+	* files.c (_cpp_find_file): Add files found by search_path_exhausted
+	to the list of all files.
+
 2004-10-14  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* errors.c (_cpp_begin_message): Print "error: " for errors.
